changed expected result for shape-margin % to absolute length

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-margin-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-margin-000.html
@@ -23,7 +23,7 @@
             {
               "actual": "10%",
               "expected_inline": "10%",
-              "expected_computed": "10%"
+              "expected_computed": "10px" // containing block defined in parsing-utils is 100px
             }
         ];
         generate_tests( ParsingUtils.testShapeMarginInlineStyle,
