--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-012.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-012.html
@@ -16,7 +16,7 @@
             font-family: Ahem;
             font-size: 20px;
             color: green;
-            line-height: 1em;
+            line-height: 20px;
         }
         #test {
             width: 200px;
