Add margin-left 10px, so we fail when shapes aren't implemented.

--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-012.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-012.html
@@ -26,6 +26,7 @@
         }
         #image {
             float: right;
+            margin-left: 10px;
             shape-outside: url("support/right-half-rectangle.jpg");
         }
     </style>
