--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-012.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-012.html
@@ -7,7 +7,7 @@
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
     <link rel="match" href="reference/shape-outside-012-ref.html"/>
     <meta name="flags" content="ahem"/>
-    <meta name="assert" content="This test verifies that content wraps regularly around jpg image with shape-outside."/>
+    <meta name="assert" content="This test verifies that content wraps around all the image pixels when shape-outside is given a jpg."/>
     <style type="text/css">
         .container {
             position: absolute;
@@ -33,7 +33,7 @@
 </head>
 <body>
     <p>
-        The test passes if the content wraps around the image's regular boundaries.
+        The test passes if there's a green square with an image at top right with vertical white and green stripes.
         There should be no red.
     </p>
     <div id="test" class="container">
