--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-006.html
@@ -24,8 +24,8 @@
         }
         #image {
             float: left;
-            -webkit-shape-outside: url("support/left-half-rectangle.png");
-            -webkit-shape-margin: 10px;
+            shape-outside: url("support/left-half-rectangle.png");
+            shape-margin: 10px;
         }
         .blue {
             width: 2px;
