--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-007.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-007.html
@@ -24,8 +24,8 @@
         }
         #image {
             float: left;
-            -webkit-shape-outside: url("support/left-half-rectangle.svg");
-            -webkit-shape-margin: 10px;
+            shape-outside: url("support/left-half-rectangle.svg");
+            shape-margin: 10px;
         }
         .blue {
             width: 2px;
