--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
@@ -16,13 +16,12 @@
           font-size: 40px;
           text-align: right;
           color: green;
-          -webkit-font-smoothing: antialiased;
         }
         #image {
             float: right;
             margin-left: 100px;
-            -webkit-shape-outside: url("support/half-rectangle.jpg"); /* size: 100x100, no alpha channel */
-            -webkit-shape-margin: 10%; /* overall shape is 120x120 rectangle with corner radii = 10px */
+            shape-outside: url("support/half-rectangle.jpg"); /* size: 100x100, no alpha channel */
+            shape-margin: 10%; /* overall shape is 120x120 rectangle with corner radii = 10px */
         }
         #failure {
             position: absolute;
