Second shape-image test and add image tag to the first one.

--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-000.html
@@ -6,7 +6,7 @@
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-image"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
     <link rel="match" href="reference/shape-outside-000-ref.html"/>
-    <meta name="flags" content="ahem"/>
+    <meta name="flags" content="ahem image"/>
     <meta name="assert" content="This test verifies that a shape specified as a png image in a data: url is properly respected on a left float."/>
     <style type="text/css">
         .container {
