Add svg image test and fix up the shape-outside url in the other tests.

--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-001.html
@@ -24,7 +24,7 @@
             float: left;
             width: 150px;
             height: 100px;
-            shape-outside: url(support/left-half-rectangle-70.png);
+            shape-outside: url("support/left-half-rectangle-70.png");
         }
         #failure {
             width: 50px;
