--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
@@ -5,7 +5,7 @@
     <link rel="author" title="Hans Muller" href="hmuller@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-image"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
-    <link rel="match" href="reference/shape-outside-00x-ref.html"/>
+    <link rel="match" href="reference/shape-outside-018-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that the boundary of a shape-outside defined by an JPEG image file is the same as the image's dimensions + shape-margin."/>
     <style type="text/css">
@@ -20,7 +20,7 @@
         #image {
             float: right;
             margin-left: 100px;
-            shape-outside: url("support/half-rectangle.jpg"); /* size: 100x100, no alpha channel */
+            shape-outside: url("../support/left-half-rectangle.jpg"); /* size: 100x100, no alpha channel */
             shape-margin: 10%; /* overall shape is 120x120 rectangle with corner radii = 10px */
         }
         #failure {
