--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
@@ -20,7 +20,7 @@
         #image {
             float: right;
             margin-left: 100px;
-            shape-outside: url("../support/left-half-rectangle.jpg"); /* size: 100x100, no alpha channel */
+            shape-outside: url("support/left-half-rectangle.jpg"); /* size: 100x100, no alpha channel */
             shape-margin: 10%; /* overall shape is 120x120 rectangle with corner radii = 10px */
         }
         #failure {
