--- a/web-animations/animation-timeline/animation-timeline.html
+++ b/web-animations/animation-timeline/animation-timeline.html
@@ -57,14 +57,12 @@ async_test(function(t) {
   // We can't just compare document.timeline.currentTime to
   // window.performance.now() because currentTime is only updated on a sample
   // so we use requestAnimationFrame instead.
-  window.requestAnimationFrame(function(rafTime) {
-    t.step(function() {
-      assert_equals(document.timeline.currentTime, rafTime,
-                    'document.timeline.currentTime matches' +
-                    ' requestAnimationFrame time');
-      t.done();
-    });
-  });
+  window.requestAnimationFrame(t.step_func(function(rafTime) {
+    assert_equals(document.timeline.currentTime, rafTime,
+                  'document.timeline.currentTime matches' +
+                  ' requestAnimationFrame time');
+    t.done();
+  }));
 },
 'document.timeline.currentTime value tests',
 {
