--- a/web-animations/animation-timeline/animation-timeline.html
+++ b/web-animations/animation-timeline/animation-timeline.html
@@ -84,7 +84,9 @@ async_test(function(t) {
 async_test(function(t) {
   var valueAtStart = document.timeline.currentTime;
   var timeAtStart = window.performance.now();
-  while (window.performance.now() - timeAtStart < 100); // Wait 100ms
+  while (window.performance.now() - timeAtStart < 100) {
+    // Wait 100ms
+  }
   assert_equals(document.timeline.currentTime, valueAtStart,
     'document.timeline.currentTime does not change within a script block');
   window.requestAnimationFrame(t.step_func(function() {
