added more detail to the assertion

--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-009.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-009.html
@@ -9,7 +9,8 @@
     <link rel="match" href="reference/shape-outside-006-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that content wraps around the image pixels extracted from
-                                 a shape-outside png file with shape-image-threshold set + the shape-margin."/>
+                                 a shape-outside png file with shape-image-threshold set + the shape-margin in
+                                 absolute length."/>
     <style type="text/css">
         body { margin: 0; }
         #test, #image, #white, .blue, .failure {
