--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-010.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-010.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: left float, url(png), real image 70% + shape-image-threshold + shape-margin (px)</title>
+    <title>CSS Test: left float, url(png), data uri + shape-image-threshold + shape-margin (%)</title>
     <link rel="author" title="Rebecca Hauck" href="rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-image"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-margin-property"/>
-    <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-image-threshold-property"/>
     <link rel="match" href="reference/shape-outside-006-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that content wraps around the image pixels extracted from
-                                 a shape-outside png file with shape-image-threshold set + the shape-margin in
-                                 absolute length."/>
+                                 a shape-outside png file with shape-image-threshold set + the shape-margin as 
+                                 a percentage."/>
     <style type="text/css">
         body { margin: 0; }
         #test, #image, #white, .blue, .failure {
@@ -38,9 +37,9 @@
             float: left;
             width: 100px;
             height: 100px;
-            shape-outside: url("support/left-half-rectangle-70.png");
-            shape-margin: 10px;
-            shape-image-threshold: 0.75;
+            shape-outside: url("support/left-half-rectangle-20.png");
+            shape-margin: 5%;
+            shape-image-threshold: 0.25;
         }
         .blue {
             width: 2px;
@@ -65,7 +64,7 @@
         The test passes if the green rectangle on the right is completely between the two blue lines.
         There should be no red.
     </p>
-    <img id="image" src="support/left-half-rectangle-70.png"/>
+    <img id="image" src="support/left-half-rectangle-20.png"/>
     <div id="white"></div>
     <div id="test">
         <div id="shape-image"></div>
