--- a/2dcontext/fill-and-stroke-styles/2d.pattern.repeat.null.html
+++ b/2dcontext/fill-and-stroke-styles/2d.pattern.repeat.null.html
@@ -14,15 +14,26 @@
 
 <p class="output">Actual output:</p>
 <canvas id="c" class="output" width="100" height="50"><p class="fallback">FAIL (fallback content)</p></canvas>
-
+<p class="output expectedtext">Expected output:<p><img src="/images/green-100x50.png" class="output expected" id="expected" alt="">
 <ul id="d"></ul>
 <script>
 var t = async_test("");
 _addTest(function(canvas, ctx) {
 
-_assert_throws("SYNTAX_ERR", function() { ctx.createPattern(canvas, null); });
+ctx.fillStyle = '#f00';
+ctx.fillRect(0, 0, 100, 50);
+var img = document.getElementById('green-1x1.png');
+var pattern = ctx.createPattern(img, null);
+ctx.fillStyle = pattern;
+ctx.fillRect(0, 0, 200, 50);
+
+_assertPixel(canvas, 1,1, 0,255,0,255, "1,1", "0,255,0,255");
+_assertPixel(canvas, 98,1, 0,255,0,255, "98,1", "0,255,0,255");
+_assertPixel(canvas, 1,48, 0,255,0,255, "1,48", "0,255,0,255");
+_assertPixel(canvas, 98,48, 0,255,0,255, "98,48", "0,255,0,255");
 
 
 });
 </script>
+<img src="/images/green-1x1.png" id="green-1x1.png" class="resource">
 
