Match the css-syntax spec for +/**/1

--- a/quirks-mode/unitless-length.html
+++ b/quirks-mode/unitless-length.html
@@ -79,8 +79,8 @@
         {input:"#0001"},
         {input:"#00001"},
         {input:"#000001"},
-        {input:"+/**/1", q:"1px"},
-        {input:"-/**/1", q:"-1px"},
+        {input:"+/**/1"},
+        {input:"-/**/1"},
         {input:"calc(1)"},
         {input:"calc(2 * 2px)", q:"4px", s:"4px"},
         {input:"1px 2", q:"1px 2px", shorthand:true},
