--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-005.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-005.html
@@ -7,7 +7,7 @@
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
     <link rel="match" href="reference/shape-outside-000-ref.html"/>
     <meta name="flags" content="ahem image"/>
-    <meta name="assert" content="This test verifies that a shape specified as a svg image with 20% alpha and 0.3 shape-image-threshold creates a proper shape."/>
+    <meta name="assert" content="This test verifies that a shape specified as a svg image in a data uri with 70% alpha and 0.8 shape-image-threshold creates a proper shape."/>
     <style type="text/css">
         .container {
           position: relative;
@@ -22,8 +22,8 @@
         }
         #image {
             float: left;
-            shape-outside: url("support/left-half-rectangle-20.svg");
-            shape-image-threshold: 0.3;
+            shape-outside: url('data:image/svg+xml;utf8,<svg width="100px" height="100px" style="background-color: rgba(0,0,0,0.7)" version="1.1" xmlns="http://www.w3.org/2000/svg"><path fill="#006400" d=" M 0.00 0.00 L 50.00 0.00 C 50.00 33.33 50.00 66.67 50.00 100.00 L 0.00 100.00 L 0.00 0.00 Z" /></svg>');
+            shape-image-threshold: 0.8;
         }
     </style>
 </head>
@@ -32,7 +32,7 @@
         The test passes if you see a solid green square. There should be no red.
     </p>
     <div id="test" class="container">
-        <img id="image" src="support/left-half-rectangle-20.svg"/>
+        <img id="image" src='data:image/svg+xml;utf8,<svg width="100px" height="100px" style="background-color: rgba(0,0,0,0.7)" version="1.1" xmlns="http://www.w3.org/2000/svg"><path fill="#006400" d=" M 0.00 0.00 L 50.00 0.00 C 50.00 33.33 50.00 66.67 50.00 100.00 L 0.00 100.00 L 0.00 0.00 Z" /></svg>'/>
         X
         X
     </div>
