--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-018.html
@@ -7,7 +7,7 @@
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
     <link rel="match" href="reference/shape-outside-018-ref.html"/>
     <meta name="flags" content="ahem"/>
-    <meta name="assert" content="This test verifies that the boundary of a shape-outside defined by an JPEG image file is the same as the image's dimensions + shape-margin."/>
+    <meta name="assert" content="This test verifies that the boundary of a shape-outside defined by a JPEG image file is the same as the image's dimensions + shape-margin."/>
     <style type="text/css">
         #container {
           position: relative;
