--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-020.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-020.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>right float, url(svg), data uri + shape-margin (%)</title>
+    <title>CSS Test: right float, url(svg), data uri + shape-margin (%)</title>
     <link rel="author" title="Hans Muller" href="hmuller@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-image"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
