--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-014.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-014.html
@@ -5,18 +5,16 @@
     <link rel="author" title="Zoltan Horvath" href="zoltan@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-image"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
-    <link rel="match" href="reference/shape-outside-014-ref.html"/>
+    <link rel="match" href="reference/shape-outside-000-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that content wraps around the shape defined by an svg file."/>
     <style type="text/css">
         .container {
-            position: absolute;
-            top: 70px;
-            left: 8px;
+            position: relative;
             font-family: Ahem;
-            font-size: 25px;
+            font-size: 50px;
+            line-height: 50px;
             color: rgb(0, 100, 1);
-            line-height: 25px;
             background-color: red;
         }
         #test {
@@ -33,12 +31,12 @@
 </head>
 <body>
     <p>
-        The test passes when the content wraps around the shape, defined by the svg file.
-        You should see a 100x100px green rectangle.
+        The test passes if you see a solid green square. There should be no red.
     </p>
     <div id="test" class="container">
         <img id="image" src="support/right-half-rectangle.svg"/>
-        XX XX XX XX
+        X
+        X
     </div>
     <div id="overlay"></div>
 </body>
