spanning fixes and webkit prefix removal per review feedback

--- a/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-022.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-image/shape-image-022.html
@@ -41,7 +41,7 @@
         <img id="image" src="support/right-half-rectangle.gif"/>
         X<br>X<br>X<br>X
         <div id="failure">
-            X<br>X<br>X<br><span style="margin-left: 70px">X
+            X<br>X<br>X<br><span style="margin-left: 70px">X</span>
         </div>
     </div>
 </body>
