--- a/2dcontext/hit-regions/addHitRegions-NotSupportedError-01.html
+++ b/2dcontext/hit-regions/addHitRegions-NotSupportedError-01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="log"></div>
-<div><canvas id="canvas"><button id="button">button</button></canvas></div>
+<div style="display: none"><canvas id="canvas"><button id="button">button</button></canvas></div>
 
 <script>
 test(function () {
