added mailto links

--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/circle/shape-outside-circle-021.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/circle/shape-outside-circle-021.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS Test: left float, circle + farthest-side + padding-box + shape-margin</title>
-        <link rel="author" title="Rebecca Hauck">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#farthest-side">
