--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/circle/shape-outside-circle-027.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/circle/shape-outside-circle-027.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS Test: right float, circle with radius in % units + shape-margin + margin-box</title>
-        <link rel="author" title="Rebecca Hauck">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-margin-property">
