--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/inset/shape-outside-inset-014.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/inset/shape-outside-inset-014.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS Test: left float, inset + content-box</title>
-        <link rel="author" title="Rebecca Hauck">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-box-values">
