--- a/XMLHttpRequest/abort-event-order.htm
+++ b/XMLHttpRequest/abort-event-order.htm
@@ -39,10 +39,10 @@
                 });
             };
 
-            xhr.onloadend          = function(e){ actual.push(e.type); };
+            xhr.onloadend          = function(e){ actual.push(e.type); VerifyResult(); };
             xhr.onabort            = function(e){ actual.push(e.type); };
 
-            xhr.upload.onloadend   = function(e){ actual.push("upload." + e.type); VerifyResult() };
+            xhr.upload.onloadend   = function(e){ actual.push("upload." + e.type); };
             xhr.upload.onabort     = function(e){ actual.push("upload." + e.type); };
 
             function VerifyResult()
