assert readyState updated after abort() in nextTick
Per the spec, the readyState is updated after the events are dispatched. Since the
assertion occurs during the final loadend event handler, there must be a pause before
the readyState can be tested, as browsers behaving according to the spec will not
have updated the readyState yet.

--- a/XMLHttpRequest/abort-event-order.htm
+++ b/XMLHttpRequest/abort-event-order.htm
@@ -50,8 +50,12 @@
                 test.step(function()
                 {
                     assert_array_equals(actual, expect);
-                    assert_equals(xhr.readyState, 0, 'state should be UNSENT');
-                    test.done();
+                    setTimeout(function() {
+                      test.step(function() {
+                        assert_equals(xhr.readyState, 0, 'state should be UNSENT');
+                        test.done();
+                      });
+                    });
                 });
             };
 
