--- a/media-source/MediaSource-algorithm-DurationChange_LessDuration.html
+++ b/media-source/MediaSource-algorithm-DurationChange_LessDuration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Check "duration change" algorithm of MediaSource Object in case the duration is changed from initial value</title>
+  <title>Check "duration change" algorithm of MediaSource Object in case new duration is less than old duration</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -51,27 +51,29 @@ async_test(function(t) {
         var durationchangeNum = 0;
 
         mediaSource.addEventListener('sourceopen', function(e){
+            mediaSource.duration = 5;
+
             var sourceBuffer = mediaSource.addSourceBuffer(mime);
             sourceBuffer.addEventListener('updateend', function(e) {
-                mediaSource.duration = 5;//change the duration from initial state 'NaN'
+                mediaSource.duration = 4;//set new duration whose value is less than old duration
             });
             sourceBuffer.appendBuffer(data);
         });
         video.addEventListener('durationchange', function(e) {
             durationchangeNum++;
 
-            if(durationchangeNum > 1) {
+            if(durationchangeNum > 2) {
                 t.step(function() {
-                    assert_equals(durationchangeNum, 2, 'One of two is fired by video element, another one is fired by MediaSource.');
-                    assert_equals(video.controller.duration, 5);
-                    assert_equals(mediaSource.duration, 5);
+                    assert_equals(durationchangeNum, 3, 'One of two is fired by video element, remains are fired by MediaSource.');
+                    assert_equals(video.controller.duration, 4);
+                    assert_equals(mediaSource.duration, 4);
                 });
                 t.done();
             }
         });
         video.src = window.URL.createObjectURL(mediaSource);
     });
-}, 'Check "duration change" algorithm of MediaSource Object in case the duration is changed from initial value.');
+}, 'Check "duration change" algorithm of MediaSource Object in case new duration is less than old duration.');
 
 </script>
 </body>
