--- a/media-source/MediaSource-algorithm-DurationChange_SameDuration.html
+++ b/media-source/MediaSource-algorithm-DurationChange_SameDuration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Check "duration change" algorithm of MediaSource Object in case the duration is changed from initial value</title>
+  <title>Check "duration change" algorithm of MediaSource Object in case new duration is equal to old duration</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -51,9 +51,11 @@ async_test(function(t) {
         var durationchangeNum = 0;
 
         mediaSource.addEventListener('sourceopen', function(e){
+            mediaSource.duration = 5;//change duration
+
             var sourceBuffer = mediaSource.addSourceBuffer(mime);
             sourceBuffer.addEventListener('updateend', function(e) {
-                mediaSource.duration = 5;//change the duration from initial state 'NaN'
+                mediaSource.duration = 5;//set new duratoin whose is equal to old duration
             });
             sourceBuffer.appendBuffer(data);
         });
@@ -71,7 +73,7 @@ async_test(function(t) {
         });
         video.src = window.URL.createObjectURL(mediaSource);
     });
-}, 'Check "duration change" algorithm of MediaSource Object in case the duration is changed from initial value.');
+}, 'Check "duration change" algorithm of MediaSource Object in case new duration is equal to old duration.');
 
 </script>
 </body>
