improving tests according to Dominic's notes

--- a/custom-elements/registering-custom-elements/extensions-to-document-interface/custom-element-name.html
+++ b/custom-elements/registering-custom-elements/extensions-to-document-interface/custom-element-name.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom element local name is the value of the EXTENDS property, supplied to Document.registerElement()</title>
+<title>Custom element local name is the lowercased value of the EXTENDS property, supplied to Document.registerElement()</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
-<meta name="assert" content="Custom element local name is the value of the EXTENDS property">
+<meta name="assert" content="Custom element local name is the lowercased value of the EXTENDS property">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#extensions-to-document-interface-to-register">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -26,11 +26,11 @@ test(function() {
         });
         var customElement = new GeneratedConstructor();
 
-        assert_equals(customElement.localName, tagName,
-            'Custom element local name should be a value of the EXTENDS property, ' +
+        assert_equals(customElement.localName, tagName.toLowerCase(),
+            'Custom element local name should be a lowercased value of the EXTENDS property, ' +
             'supplied to Document.registerElement()');
     });
-}, 'Custom element local name is the value of the EXTENDS property, ' +
+}, 'Custom element local name is the lowercased value of the EXTENDS property, ' +
     'supplied to Document.registerElement()');
 </script>
 </body>
