Fixed WebM video to refer under /media directory.

--- a/media-source/SourceBuffer-appendWindowEnd_updating.html
+++ b/media-source/SourceBuffer-appendWindowEnd_updating.html
@@ -13,7 +13,7 @@
 <div id="log"></div>
 
 <script>
-var FILE = 'test.webm';
+var FILE = '/media/white.webm';
 var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
 
@@ -41,7 +41,6 @@ async_test(function(t) {
                                   function() {
                                       sourceBuffer.appendWindowEnd = 1;
                                   });
-                    
                 });
                 t.done();
             });
