--- a/media-source/MediaSource-addSourceBuffer_infinite-calling.html
+++ b/media-source/MediaSource-addSourceBuffer_infinite-calling.html
@@ -13,7 +13,7 @@
 <div id="log"></div>
 
 <script>
-var FILE = 'test.webm';
+var FILE = '/media/white.webm';
 var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
 async_test(function(t) {
