--- a/media-source/MediaSource-endOfStream_updating.html
+++ b/media-source/MediaSource-endOfStream_updating.html
@@ -14,7 +14,7 @@
 <div id="log"></div>
 
 <script>
-var FILE = 'test.webm';
+var FILE = '/media/white.webm';
 var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
 function GET(url, processBody) {
